--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <body text="black" bgcolor="pink">
   <center><br><br><br><br><br><br>
   
-  <h1> GM BABY </h1>
+  <h1> GM dude </h1>
   <h2>
   
   
-   I LOVE YOU CUTIE
+    this is anjan
    <h2>
    
    </center>
