--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <body text="black" bgcolor="pink">
   <center><br><br><br><br><br><br>
   
-  <h1> GM dude </h1>
+  <h1> practicing  </h1>
   <h2>
   
   
-    this is anjan
+    <marquee bgcolor="yellow" direction="right" behavior="alternate">hai This Is Anjan </marquee>
    <h2>
    
    </center>
