--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body text="black" bgcolor="pink">
   <center><br><br><br><br><br><br>
   
-  <h1 bgcolor="brown"> &hearts; HAI VINI WHAT R U DOING &hearts;</h1>
+  <h1> &hearts; I LOVE YOU CUTIE &hearts;</h1>
   <h2>
   
   
