--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <title> HTML body bgcolor Attribute </title>
   </head>
   
-  <body text="black" bgcolor="pink">
+  <body text="black" bgcolor="purple">
   <center><br><br><br><br><br><br>
   
   <h1> &hearts; I LOVE YOU CUTIE &hearts;</h1>
   <h2>
   
   
-    <marquee bgcolor="yellow" direction="right" behavior="alternate">hai This Is Anjan </marquee>
+    <marquee bgcolor="white" direction="right" behavior="alternate">  Anjan &hearts; Priya </marquee>
    <h2>
    
    </center>
