--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2>
   
   
-    <marquee bgcolor="orange" direction="right" behavior="alternate">  Anjan &hearts; Priya </marquee>
+    <marquee bgcolor="orange" direction="right" behavior="alternate" scrollamount="200">  Anjan &hearts; Priya </marquee>
    <h2>
    
    </center>
