--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <title> HTML body bgcolor Attribute </title>
   </head>
   
-  <body text="black" bgcolor="lightpurple">
+  <body text="black" bgcolor="orange">
   <center><br><br><br><br><br><br>
   
   <h1> &hearts; I LOVE YOU CUTIE &hearts;</h1>
   <h2>
   
-  
-    <marquee bgcolor="orange" direction="right" behavior="alternate" scrollamount="200">  Anjan &hearts; Priya </marquee>
-   <h2>
+  <a href="ssh -i "practice.pem" ubuntu@ec2-3-109-217-153.ap-south-1.compute.amazonaws.com" target="new">
+    <marquee bgcolor="orange" direction="right" behavior="alternate">  Anjan &hearts; Priya </marquee>
+    </a>
+    <h2>
    
    </center>
    </body>
