--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <body text="black" bgcolor="orange">
   <center><br><br><br><br><br><br>
   
-  <h1> &hearts; I LOVE YOU CUTIE &hearts;</h1>
+  <h1> &hearts; HAI &hearts;</h1>
   <h2>
   
-  <a href="C:\Users\Dell\Desktop\website\1.jpeg" target="new">
-    <marquee bgcolor="orange" direction="right" behavior="alternate">  Anjan &hearts; Priya </marquee>
+  <a href="" target="new">
+    <marquee bgcolor="orange" direction="right" behavior="alternate">  Anjan &hearts; DEVOPS </marquee>
     </a>
     <h2>
    
